--- a/src/main/resources/application-online.yml
+++ b/src/main/resources/application-online.yml
@@ -4,9 +4,9 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://10.10.71.156:3306/toy?useUnicode=true&character_set_client=utf8mb4
-    username: toy-rw
-    password: toyD901online
+    url: jdbc:mysql://10.0.0.14:3306/toy?useUnicode=true&character_set_client=utf8mb4
+    username: root
+    password: msz@2020
 
     druid:
       initial-size: 5
